    - Export filter "tablerefsandbib" updated to contain links to files and notes 
      (patch 2787096 by Thomas Arildsen).
    - "of" added to the list of skip words (patch 2781830).
    - Added cli-function for exporting entries filtered by a search term 
      (patch 1817093 by Silberer, Zirn)
    - Added highlighting in textarea for search text (patch 3117881 by Ben). 
      Slightly modified to cope with words[]={""}.
    - Switched from PDFBox 0.7.3 to PDFBox 1.6.0.
2.7.1
    - DocBook export format switched to 4.4 (based on patch 3313898).
    - In case a new entry is added, this entry is highlighted and the editor is opened
      if configured in the settings (patch 3370466). The UI behavior of adding an entry
      at "new entry from plain text" is now similar to "new entry".
2.7
    - Medline importer now wraps multipart last names in braces.
    - RIS importer now handles multiple title fields by concatenation.
    - Disallowed "comment" as entry type name, since this conflicts with the BibTeX format.
    - Fixed handling of suffix name parts (Jr, etc.) in Medline importer.
    - Added optional second numeric argument to Authors formatter, which determines
      how many authors are shown if the maximum number is exceeded.
    - Added content selector for "review" field in entry editor.
    - Improved detection of file type when adding new link. Can now recognize double
      extensions such as ".ps.gz".
    - Improved autocompletion of author names. Added options to complete either in
      'Firstname Lastname' or 'Lastname, Firstname' formats, or in both.
    - Fixed bug in import function if no suitable import filter is found.
2.7 beta 2
    - Added support for MrdLib lookup or metadata extraction when PDFs are dragged into
      JabRef.
    - Added option under "External programs" for disabling the automatic opening of the
      Browse dialog when creating a new file link.