@@ -13,7 +13,7 @@ interface SearchTextListener {
 	/**
 	 * Array of words that were searched for
 	 * 
-	 * @param words
+	 * @param words. null if nothing is searched for
 	 */
 	public void searchText(ArrayList<String> words);
 }
